welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:2: error: value or is not a member of Boolean
	if (!weekday or vacation) {
                     ^